# automated-video-description-generator

./: .gitignore  README.md  example.config.yaml  main.py  pyproject.toml  requirements.txt  result.json  video_metadata.json
pipeline/: cli.py  evaluation.py  frame_extraction.py  ingestion.py  preprocessing.py  prompt_engineering.py  vlm_inference.py
tests/: test_pipeline.py
utils/: jsonify.py  logger.py
