[project]
name = "automated-video-description-generator"
version = "0.1.0"
description = "A modular, extensible pipeline for generating natural language descriptions of videos using state-of-the-art Vision-Language Models (VLMs). This project is designed for research, prototyping, and practical applications in video understanding, accessibility, and content summarization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.84.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
]

[tool.setuptools]
packages = ["pipeline", "utils"]
[project.scripts]
video-describe = "pipeline:cli.main"

[dependency-groups]
dev = [
    "automated-video-description-generator",
]

[tool.uv.sources]
automated-video-description-generator = { workspace = true }
